--- a/src/app/device/device.component.html
+++ b/src/app/device/device.component.html
@@ -9,7 +9,7 @@
       <input type="text" class="form-control" placeholder="Last name">
     </div> -->
     <div class="col-md-4">
-      <input type="date" class="form-control" [(ngModel)]="date" placeholder="Last name">
+      <input type="date" class="form-control" placeholder="Last name">
     </div>
   </div>
 </div>
